# A-Maze-ing

./: .gitignore  Makefile  PROJECT_STATUS.html  README.md  a_maze_ing.py  config.txt  mazegen-1.0.0-py3-none-any.whl  mlx_main.py  output_maze.txt  pyproject.toml  requirements.txt
assets/imgs/: banner.xpm  menu_background.xpm
docs/: README.md
mazegen/: Maze.py  MazeGenerator.py  __init__.py  generator.py  maze.py  solver.py
mlx_CLXV/: mlx-2.2-py3-none-any.whl
parsing/: config_parser.py
render/: Assets.py  GameState.py  ascii_renderer.py  constants.py  converter.py  draw_maze.py  menu.py  mlx_renderer.py  resize.py  x.py
utils/: export_utils.py  hex_utils.py  path_utils.py
