[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generator package from A-Maze-ing"
requires-python = ">=3.10"

authors = [
    { name = "sarfreit" },
    { name = "bramalho" }
]

[tool.setuptools]
packages = ["mazegen"]

[tool.flake8]
exclude = ["venv", "__pycache__", "mlx_CLXV"]

[tool.mypy]
exclude = ["venv", "mlx_CLXV"]
disable_error_code = ["import-untyped"]